change main info

--- a/src/BlazorApp/Components/Portfolio.razor
+++ b/src/BlazorApp/Components/Portfolio.razor
@@ -7,7 +7,7 @@
     }
     else
     {
-        <div class="portfolio-hero">
+        @*<div class="portfolio-hero">
             @if (hero is not null)
             {
                 <img src="@(hero.Src)" style="height: 90%; width: 100%; object-fit: cover;" 
@@ -24,7 +24,8 @@
                     <p class="small">@project.Description</p>
                 </div>
             }
-        </div>
+        </div>*@
+        <div class="cont">In development..</div>
     }
     </div>
 </section>
