--- a/src/BlazorApp/Pages/Index.razor
+++ b/src/BlazorApp/Pages/Index.razor
@@ -2,7 +2,7 @@
 @inject HttpClient Http
 @inject HeroImageService HeroImageService
 
-<PageTitle>Portfolio</PageTitle>
+<PageTitle>Rodrigo Pereira</PageTitle>
 
 <Header />
 <Home Http=@Http HeroImageService=@HeroImageService />
