--- a/src/BlazorApp/Components/Portfolio.razor
+++ b/src/BlazorApp/Components/Portfolio.razor
@@ -7,13 +7,7 @@
     }
     else
     {
-        @*<div class="portfolio-hero">
-            @if (hero is not null)
-            {
-                <img src="@(hero.Src)" style="height: 90%; width: 100%; object-fit: cover;" 
-                    alt="@(hero.Alt)" />
-            }
-        </div>
+        
         <div class="container">
             @foreach (var project in projects)
             {
@@ -24,8 +18,8 @@
                     <p class="small">@project.Description</p>
                 </div>
             }
-        </div>*@
-        <div class="cont">In development..</div>
+        </div>
+        @* <div class="cont">In development..</div> *@
     }
     </div>
 </section>
