--- a/src/BlazorApp/wwwroot/css/app.css
+++ b/src/BlazorApp/wwwroot/css/app.css
@@ -132,6 +132,7 @@ a:hover {
 .portfolio-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
   padding-top: 3rem;
 }
 
@@ -156,7 +157,7 @@ a:hover {
 .container {
   margin: 20px auto;
   display: grid;
-  grid-template-columns: 330px 300px;
+  grid-template-columns: 330px 300px 300px;
   grid-gap: 20px;
 }
 
